# kube.direct

./: .gitignore  .golangci.yml  .typos.toml  Cargo.toml  LICENSE  Makefile  README.md  dependencies.yaml  func.yaml
.github/: dependabot.yml  generate-api  github-actions-setup  sign-image
.github/workflows/: deploy.yml  test.yml
.tekton/: push.yaml
api/: api.proto
backend/: .golangci.yml  Makefile  func.yaml  go.mod  go.sum  handle.go  handle_test.go  impl.go
backend/api/: api.pb.go  api_grpc.pb.go
backend/backendfakes/: fake_impl.go
backend/cmd/: main.go
backend/internal/server/: server.go
deploy/: cert.yaml  domainmapping.yaml  rbac-backend.yml  rbac.yml
frontend/: Cargo.toml  Makefile  Procfile  build.rs  func.yaml  index.html
frontend/src/: api.rs  app.rs  config.rs  error.rs  handler.rs  lib.rs  main.rs  server.rs  template.rs
frontend/templates/: index.html
src/: config.rs  handler.rs  main.rs
