[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frontend"
path = "src/main.rs"

[profile.release]
codegen-units = 1
debug = 0
incremental = true
lto = true
opt-level = "z"
strip = "symbols"

[features]
default   = []
gen-proto = ["dep:prost-build"]
local = []

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
actix-web-static-files = "4.0.1"
anyhow = "1.0.71"
askama = "0.12.0"
env_logger = "0.10.0"
log = "0.4.19"
prost = "0.11.9"
reqwest = { version = "0.11.18", default-features = false }
static-files = "0.2.3"

[build-dependencies]
prost-build = { version = "0.11.9", optional = true }
static-files = "0.2.3"
