[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[profile.release]
codegen-units = 1
debug = 0
incremental = true
lto = true
opt-level = "z"
strip = "symbols"

[features]
default   = []
gen-proto = ["dep:prost-build"]

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
prost = "0.12.1"
reqwest = { version = "0.11.22", default-features = false, features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["hydration", "ssr"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bytes = "1.5.0"
env_logger = "0.10.0"
futures = "0.3.28"
tokio = { version = "1.33.0", features = ["full"] }
warp = "0.3.6"

[build-dependencies]
prost-build = { version = "0.12.1", optional = true }
